BUgfix: hovered fancytree nodes were not properly aligned

--- a/style.css
+++ b/style.css
@@ -124,7 +124,6 @@ body .fancytree-node:not(.fancytree-loading) .fancytree-expander:before {
 }
 
 body span.fancytree-node:hover {
-    border: 0;
     background-color: rgba(0,0,0,0.1);
     border-radius: 2px;
 }
